--- a/sandbox/package.php.yml
+++ b/sandbox/package.php.yml
@@ -10,9 +10,9 @@ requires:
 
 deps:
   jphp-core: '*'
-  jphp-gui-ext: ~2.0.0
-  jphp-gui-jfoenix-ext: ~2.0.0
-  jphp-gui-jfx-win: ~11.0.0
+  jphp-gui-ext: '^2.0.0'
+  jphp-gui-jfoenix-ext: '^2.0.0'
+  jphp-gui-jfx-win: '^11.0.0'
 
 sources:
   - 'src'
