--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,6 @@ include 'jphp-gui-desktop-ext'
 include 'jphp-gui-game-ext'
 include 'jphp-gui-jfoenix-ext'
 include 'jphp-gui-systemtray-ext'
+include 'jphp-gui-jfx-linux'
+include 'jphp-gui-jfx-mac'
+include 'jphp-gui-jfx-win'
