--- a/jphp-gui-desktop-ext/package.php.yml
+++ b/jphp-gui-desktop-ext/package.php.yml
@@ -3,6 +3,9 @@ name: jphp-gui-desktop-ext
 version: 2.0.0
 description: Desktop features.
 
+jfx:
+  version: 11.0.1
+
 plugins: [Doc, Hub, Gradle]
 
 deps:
@@ -12,3 +15,12 @@ doc:
   url-prefix: 'https://github.com/jphp-group/jphp-gui-ext/blob/master/%name%/api-docs/'
   stub-dirs: ['./src/main/resources/JPHP-INF/sdk']
   langs: {en: English, ru: Русский}
+
+
+gradle:
+  providedDeps:
+    - 'org.openjfx:javafx-base:%jfx.version%:linux'
+    - 'org.openjfx:javafx-graphics:%jfx.version%:linux'
+    - 'org.openjfx:javafx-controls:%jfx.version%:linux'
+    - 'org.openjfx:javafx-swing:%jfx.version%:linux'
+
