--- a/sandbox/package.php.yml
+++ b/sandbox/package.php.yml
@@ -12,6 +12,7 @@ deps:
   jphp-core: '*'
   jphp-gui-ext: '^2.0.0'
   jphp-gui-jfoenix-ext: '^2.0.0'
+  jphp-gui-desktop-ext: '^2.0.0'
   jphp-gui-jfx-win: '^11.0.0'
 
 sources:
