--- a/jphp-gui-ext/package.php.yml
+++ b/jphp-gui-ext/package.php.yml
@@ -1,12 +1,15 @@
 
 name: jphp-gui-ext
-version: 2.1.5
+version: 2.1.6
 description: GUI based on JavaFX 11 library.
 
 deps:
   jphp-core: '*'
   jphp-xml-ext: '*'
   jphp-graphic-ext: '*'
+
+jvm-modules:
+ - 'java.scripting'
 
 jfx:
   version: 11.0.1
@@ -17,7 +20,6 @@ doc:
   url-prefix: 'https://github.com/jphp-group/jphp-gui-ext/blob/master/%name%/api-docs/'
   langs: {en: English, ru: Русский}
 
-  implementation 'de.jensd:fontawesomefx-commons:11.0'
 gradle:
   providedDeps:
   - 'org.openjfx:javafx-base:%jfx.version%:linux'
@@ -30,8 +32,10 @@ gradle:
 
 
 history:
+  2.1.6:
+  - Fix jlink support.
   2.1.5:
-  - Add Timer.shutdownAll() on close in FXLauncher
+  - Add Timer.shutdownAll() on close in FXLauncher.
   2.1.4:
   - Fix colorPicker.value property bugs.
   2.1.2:
