--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,14 @@
 
 include 'jphp-gui-ext'
+include 'jphp-gui-web-ext'
 include 'jphp-gui-desktop-ext'
 include 'jphp-gui-fonticons-ext'
 include 'jphp-gui-game-ext'
 include 'jphp-gui-jfoenix-ext'
 include 'jphp-gui-systemtray-ext'
 include 'jphp-gui-jfx-linux'
+include 'jphp-gui-jfx-web-linux'
 include 'jphp-gui-jfx-mac'
+include 'jphp-gui-jfx-web-mac'
 include 'jphp-gui-jfx-win'
+include 'jphp-gui-jfx-web-win'
