Update JavaFX to 14.

--- a/jphp-gui-jfx-linux/package.php.yml
+++ b/jphp-gui-jfx-linux/package.php.yml
@@ -1,10 +1,11 @@
 
 name: jphp-gui-jfx-linux
-version: 13.0.2
+version: 14.0.0
 description: Linux JavaFX module
 
 jfx:
   os: linux
+  version: 14
 
 plugins: [Doc, Hub, Gradle]
 
@@ -15,9 +16,9 @@ doc:
 
 gradle:
   deps:
-  - 'org.openjfx:javafx-base:%version%:%jfx.os%'
-  - 'org.openjfx:javafx-graphics:%version%:%jfx.os%'
-  - 'org.openjfx:javafx-controls:%version%:%jfx.os%'
-  - 'org.openjfx:javafx-fxml:%version%:%jfx.os%'
-  - 'org.openjfx:javafx-media:%version%:%jfx.os%'
-  - 'org.openjfx:javafx-swing:%version%:%jfx.os%'
+    - 'org.openjfx:javafx-base:%jfx.version%:%jfx.os%'
+    - 'org.openjfx:javafx-graphics:%jfx.version%:%jfx.os%'
+    - 'org.openjfx:javafx-controls:%jfx.version%:%jfx.os%'
+    - 'org.openjfx:javafx-fxml:%jfx.version%:%jfx.os%'
+    - 'org.openjfx:javafx-media:%jfx.version%:%jfx.os%'
+    - 'org.openjfx:javafx-swing:%jfx.version%:%jfx.os%'
